# UvA-Thesis

./: .gitignore  ArticleDownloaders.py  ArticleProcessor.py  DatasetConstructor.py  EvaluationGUI.py  README.md  ResponseGenerator.py  data_analysis.ipynb  dev_message.txt  evaluation_results.csv  img-context-df.csv  requirements.txt  responses.csv
responses/: response_"Did_I_buy_that_just-with-image-refs_without_context_20250730_154718_768.json  response_1_UNDERSTANDING_AND_-with-image-refs_without_context_20250730_154813_823.json  response_2507.08637v1-with-image-refs_with_context_20250730_153900_487.json  response_2507.08637v1-with-image-refs_without_context_20250730_153912_962.json  response_2507.08665v1-with-image-refs_with_context_20250730_153926_896.json  response_2507.08723v1-with-image-refs_without_context_20250730_154055_259.json  response_2507.08731v1-with-image-refs_with_context_20250730_154119_533.json  response_2507.08745v1-with-image-refs_with_context_20250730_154151_014.json  response_2507.08745v1-with-image-refs_without_context_20250730_154213_061.json  response_2507.08747v1-with-image-refs_with_context_20250730_154222_688.json  response_2507.08748v1-with-image-refs_with_context_20250730_154304_823.json  (+64 more)
study1/: README.md  (+1 more)
study2/: README.md  pyproject.toml  requirements.txt
study2/data/raw/: queries.json
study2/notebooks/: demo.ipynb
study2/outputs/: all_responses.csv
study2/src/: querymaker.py
study2/src/embeddings/: embeddings.py
study2/src/ingestion/: docloader.py  ingestion.py  interpreter.py
study2/src/retrieval/: retriever.py
(+53 files in other folders)
